--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - brew update
 
 script:
+  - xcodebuild test -scheme GetBSDProcessListTests -configuration Release
   - carthage build --no-skip-current
 
 notifications:
